2008-06-03  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_internals.erl (gen_setopts): Fixed a bug where
	'Options' was not passed to the underlying setopts/2 function.

	* src/compat/xml.erl: Synchronize this compat module with the latest
	version from ejabberd repository (revision 1344). This time, the only
	modifications are the calls to exmpp_xml; there's no changes to the
	documentation or the style. It should ease future modifications
	tracking. Also new features missing in exmpp_xml were identified.

	* src/compat/stringprep.erl: Synchronize this compat module with the
	latest version from ejabberd repository (revision 1344). As with xml,
	the modifications are limited to the calls to exmpp_stringprep.

	* include/jlib.hrl, include/Makefile.am, src/compat/jlib.erl: Again,
	reduce diff with jlib from ejabberd repository (revision 1344). The
	new jlib header is added for the old #jid record. It's installed only
	when the compat layer is enabled.

	* src/compat/stringprep.erl (tolower): Fixed a typo in a function
	name.

	* src/core/exmpp_jid.erl, src/compat/jlib.erl: For unspecified node or
	resource, ejabberd expects the empty string, not 'undefined'. Also
	fixed a bug with a call to a non-existing exmpp_jid:jid_to_string/3
	function.

2008-06-02  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_internals.erl, src/core/exmpp_tls.erl,
	src/core/exmpp_compress.erl: Move underlying_recv/2 and
	underlying_send/2 to exmpp_internals. exmpp_tls and exmpp_compress
	were sharing this small piece of code.

	* src/core/exmpp_internals.erl: Fixed a bug with documentation.

	* src/compat/iconv.erl, src/compat/sha.erl, c_src/iconv_erl.c,
	m4/iconv.m4, src/Emakefile.in, src/Makefile.am, c_src/Makefile.unix,
	c_src/Makefile.am, doc/Makefile.am, ebin/Makefile.am,
	ebin/exmpp.app.in, configure.ac: Remove 'iconv' and 'sha' from the
	compat layer as they belong to ejabberd specificaly. Also the